# koi-engine

./: .clangd  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  PROMPT.md  README.md  ROADMAP.md
assets/: multimesh.glb  sphere.glb
docs/: 00-getting-started.html  00-getting-started.md  01-window-and-render-loop.html  01-window-and-render-loop.md  02-first-triangle.html  03-vertex-and-index-buffers.html  04-3d-cube-mvp-and-depth.html  05-camera-and-input.html  06-meshes-and-scene-graph.html  07-textures-and-samplers.html  08-lighting-and-normals.html  09-materials.html  10-models-and-shadows.html  11-post-processing.html  12-multiple-lights.html  13-pbr-materials.html  index.html  style.css
docs/tuts/: 00-getting-started.html  01-window-and-render-loop.html  02-first-triangle.html  03-vertex-and-index-buffers.html  04-3d-cube-mvp-and-depth.html  05-camera-and-input.html  06-meshes-and-scene-graph.html  07-textures-and-samplers.html  08-lighting-and-normals.html  09-materials.html  10-models-and-shadows.html  12-multiple-lights.html  14-texture-and-normal-maps.html  15-skybox-and-cubemaps.html  16-image-based-lighting.html  18-engine-app-separation.html  19-quaternions.html  20-geometry-utilities.html  21-render-queue-and-frustum-culling.html  25-instancing-and-draw-call-sorting.html  26-gltf-node-hierarchy.html  index.html
documentation/: index.html
documentation/docs/: 00-getting-started.html  01-window-and-render-loop.html  02-first-triangle.html  03-vertex-and-index-buffers.html  04-3d-cube-mvp-and-depth.html  05-camera-and-input.html  06-meshes-and-scene-graph.html  07-textures-and-samplers.html  08-lighting-and-normals.html  09-materials.html  10-models-and-shadows.html  11-post-processing.html  12-multiple-lights.html  13-pbr-materials.html  14-texture-and-normal-maps.html  15-skybox-and-cubemaps.html  16-image-based-lighting.html  17-gltf-pbr-import.html  18-engine-app-separation.html  19-quaternions.html  20-geometry-utilities.html  21-render-queue-and-frustum-culling.html  22-transparency-and-alpha-blending.html  23-debug-draw.html  24-hud-and-text.html  25-instancing-and-draw-call-sorting.html  index.html
memory/: 2026-06-28.md  2026-06-29.md  2026-06-30.md  2026-07-01.md  2026-07-02.md  2026-07-03.md  2026-07-04.md  2026-07-10.md  2026-07-11.md  2026-07-13.md  2026-07-15.md
samples/demo/: DemoApp.cpp  DemoApp.hpp  main.cpp
shaders/: blur.frag  brdf_lut.frag  bright.frag  composite.frag  debug_line.frag  debug_line.vert  fullscreen.vert  fxaa.frag  hud.frag  hud.vert  ibl_cube.vert  irradiance_convolution.frag  prefilter_env.frag  shadow.frag  shadow.vert  skybox.frag  skybox.vert  triangle.frag  triangle.vert
src/: main.cpp
src/core/: Application.hpp  Engine.cpp  Engine.hpp  Log.hpp  Window.cpp  Window.hpp
src/math/: Geometry.hpp  Mat4.hpp  Quat.hpp  Vec.hpp
src/renderer/: DebugDraw.cpp  DebugDraw.hpp  Font.hpp  FrameView.hpp  GpuRenderer.cpp  GpuRenderer.hpp  Hud.cpp  Hud.hpp  Mesh.cpp  Mesh.hpp  ModelLoader.cpp  ModelLoader.hpp  Pbr.hpp  PostProcess.hpp  Primitives.cpp  Primitives.hpp  RenderQueue.cpp  RenderQueue.hpp  Shader.cpp  Shader.hpp  Tangents.hpp  Texture.cpp  Texture.hpp  Vertex.hpp
src/scene/: Camera.cpp  Camera.hpp  Light.hpp  Material.hpp  Node.cpp  Node.hpp  Transform.hpp
tests/: test_application.cpp  test_camera.cpp  test_core.cpp  test_debug_draw.cpp  test_geometry.cpp  test_hud.cpp  test_ibl.cpp  test_light.cpp  test_math.cpp  test_node.cpp  test_pbr.cpp  test_post.cpp  test_quat.cpp  test_render_queue.cpp  test_shader.cpp  test_tangent.cpp  test_transform.cpp  test_vertex.cpp
tools/: gen_multimesh.py  gen_skybox.py  gen_textures.py
